--- a/1. Home GSAP/style.css
+++ b/1. Home GSAP/style.css
@@ -9,6 +9,7 @@
 body {
   font-family: Antic Slab, sans-serif;
   background: #f1f1f1;
+  height: 100vh;
 }
 
 nav {
@@ -51,13 +52,13 @@ nav img {
 }
 .home {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
 }
 
 .overlay {
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background: rgba(0, 0, 0, 0.603);
   top: 0;
   left: 0;
@@ -79,7 +80,7 @@ video {
   width: 600px;
   margin: 0 auto;
   position: relative;
-  top: 150px;
+  top: 100px;
   color: #fff;
   z-index: 150;
 }
