add : scroll animation

--- a/8. Scrollable Images/style.css
+++ b/8. Scrollable Images/style.css
@@ -4,3 +4,26 @@
   padding: 0;
 }
 
+.box {
+  position: relative;
+  height: 100vh;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+
+img {
+  height: 600px;
+  width: 400px;
+  object-fit: cover;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.b1 {
+  background-color: #e27d60;
+}
+
+.b2{
+  background-color: #85cdca;
+}
